--- a/references.bib
+++ b/references.bib
@@ -350,6 +350,16 @@
    year = {2015, in submission},
 }
 
+=== Manual ===
+@misc{demetrescuetal2006dimacs9,
+   author = {Camil Demetrescu and Andrew V. Goldberg
+      and David S. Johnson},
+   title = {9th {DIMACS} Implementation Challenge: Shortest Paths},
+   year = 2006,
+   howpublished = "\url{http://www.dis.uniroma1.it/challenge9/}",
+   note = {[Online; accessed 2016-May-22]},
+}
+
 === From dl.acm.org ===
 @incollection{demetrescu2010dynamic,
    author = {Demetrescu, Camil and Eppstein, David and Galil, Zvi
@@ -921,6 +931,25 @@
    url = {http://ijr.sagepub.com/content/32/9-10/1194.abstract},
    eprint = {http://ijr.sagepub.com/content/32/9-10/1194.full.pdf+html},
    journal = {The International Journal of Robotics Research},
+}
+
+=== From dl.acm.org ===
+@article{kaindl1997biheurreconsidered,
+   author = {Kaindl, Hermann and Kainz, Gerhard},
+   title = {Bidirectional Heuristic Search Reconsidered},
+   journal = {J. Artif. Int. Res.},
+   issue_date = {July 1997},
+   volume = {7},
+   number = {1},
+   month = dec,
+   year = {1997},
+   issn = {1076-9757},
+   pages = {283--317},
+   numpages = {35},
+   url = {http://dl.acm.org/citation.cfm?id=1622776.1622787},
+   acmid = {1622787},
+   publisher = {AI Access Foundation},
+   address = {USA},
 }
 
 === From IEEE Xplore ===
