fix arastar ref

--- a/references.bib
+++ b/references.bib
@@ -1303,7 +1303,7 @@
 === From papers.nips.cc ===
 @incollection{likhachev2004arastar,
    author = {Maxim Likhachev and Geoffrey J Gordon and Sebastian Thrun},
-   title = {ARA\ast : Anytime A\ast  with Provable Bounds on
+   title = {{ARA}* : Anytime {A}*  with Provable Bounds on
       Sub-Optimality},
    booktitle = {Advances in Neural Information Processing Systems 16},
    editor = {S. Thrun and L. K. Saul and B. Sch\"{o}lkopf},
