latest lazysp slides

--- a/references.bib
+++ b/references.bib
@@ -1887,6 +1887,16 @@
    pages = {3310--3317},
 }
 
+=== Manual ===
+@inproceedings{stentz1995focusseddstar,
+   author = {Anthony Stentz},
+   title = {The Focussed {D}* Algorithm for Real-Time Replanning},
+   booktitle = {In Proceedings of the International Joint Conference
+      on Artificial Intelligence},
+   year = {1995},
+   pages = {1652--–1659},
+} 
+
 === Created manually ===
 @article{stentz2014chimp,
    author = {Stentz, Tony and Herman, Herman and Kelly, Alonzo
