--- a/thesis-ch03-lazysp.tex
+++ b/thesis-ch03-lazysp.tex
@@ -327,7 +327,7 @@ focus on cases with $\epsilon = 1$.
 
 The LazySP algorithm exhibits a rough similarity to optimal
 replanning algorithms such as
-D* \citep{stentz1994dstar}
+D* \citep{stentz1994dstar} \citep{stentz1995focusseddstar}
 which plan a sequence of shortest paths for a mobile robot
 as new edge weights are discovered during its traverse.
 D* treats edge changes
