update lazysp talk / notes

--- a/lazysptalk.tex
+++ b/lazysptalk.tex
@@ -549,7 +549,7 @@ Lazy Best-First Path Search with Edge Selectors}
          }%
          \only<15->{%
             \vspace{0.2cm}
-            $w(e) = \mbox{Reconnaisance}(e)$
+            $w(e) = \mbox{Reconnaissance}(e)$
          }%
       \end{minipage}};
    
@@ -1232,7 +1232,7 @@ Lazy Best-First Path Search with Edge Selectors}
       {\begin{minipage}{5.5cm}
          \textbf{LazySP w/ Expand Selector}
          
-         (all out-edges of fronteir vertex)
+         (all out-edges of frontier vertex)
       \end{minipage}};
       \begin{scope}[scale=0.5,shift={(1.75,10.2)}]
       
@@ -1268,7 +1268,7 @@ Lazy Best-First Path Search with Edge Selectors}
          }
          
          \only<5->{
-         % point to fronteir vertex
+         % point to frontier vertex
          \draw[blue!50!white,->,ultra thick] (0.5,3.0) -- (1.5,2.0);
          }
          
